@@ -167,6 +167,8 @@ UI_EN = {
     UI_trait_depriveddesc = "You begin the game with absolutely nothing - not even clothes!",
     UI_trait_fitted = "Well-Fitted",
     UI_trait_fitteddesc = "Worn clothing weights half as much and does not impose any speed penalty.",
+    UI_trait_tavernbrawler = "Tavern Brawler",
+    UI_trait_tavernbrawlerdesc = "You are more effective at using whatever is available to you as a weapon.<br>Improvised weapons (such as, but not limited to: Spoons, Forks, Pool Cues, or Frying Pans) are slightly more effective and much less likely to break.<br>Please note that improvised weapons will never be a good alternative to proper weapons, but this trait makes them more usable as a stopgap.",
     UI_MoreTraits_Options_ScroungerAnnounce = "Announce Scrounger and Incomprehensive",
     UI_MoreTraits_Options_ScroungerAnnounce_ToolTip = "If you have the Scrounger or Incomprehensive trait, you will be notified if item(s) are found or lost.",
     UI_MoreTraits_Options_ScroungerHighlight = "Highlight Scrounger Containers",
